--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.1",
     "styled-components": "^5.3.6",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
